Kubernetes/webservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: webservice
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:  '80'
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
