Kubernetes/webservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: webservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web.blibli.future
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
